--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
     </div>
     <div class="projeto">
       <a href="https://t.me/lznox_bot">
-  <img src="Telegram-Logo-PNG-Pic.png" 
+  <img src="https://s.zst.com.br/cms-assets/2021/03/html-capa-1-.jpg" 
        alt="Projeto em carregamento - Em produção" loading="lazy" />
   <div class="projeto-info">
-    <h3>BOT TELEGRAM</h3>
-    <p>Meu primeiro bot para o telegram usando JavaScript</p>
+    <h3>EM PRODUÇÃO...</h3>
+    <p>preparando algo incrivel</p>
   </div>
   </a>
 </div>
